--- a/package.json
+++ b/package.json
@@ -4,8 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js",
+    "start-prod": "node index.js"
   },
   "author": "Nick Palenchar",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "chalk": "^1.1.3",
+    "express": "^4.14.0",
+    "restify": "^5.0.0-beta-1",
+    "restify-plugins": "^1.1.0"
+  }
 }
