--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chalk": "^1.1.3",
     "express": "^4.14.0",
     "restify": "^5.0.0-beta-1",
-    "restify-plugins": "^1.1.0"
+    "restify-plugins": "^1.1.0",
+    "restify-router": "^0.2.1"
   }
 }
