--- a/package.json
+++ b/package.json
@@ -11,8 +11,13 @@
   "author": "Nick Palenchar",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.6.2",
+    "bluebird": "^3.4.6",
     "chalk": "^1.1.3",
     "express": "^4.14.0",
+    "express-route-versioning": "^1.5.0",
+    "express-routes-versioning": "^0.3.0",
+    "random-token-generator": "^1.0.2",
     "restify": "^5.0.0-beta-1",
     "restify-plugins": "^1.1.0",
     "restify-router": "^0.2.1"
